Split CPreferencesTaskDefPage into two separate pages

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -399,9 +399,9 @@ BEGIN
                     LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PREFTASKDEF_PAGE DIALOG DISCARDABLE  0, 0, 398, 620
-STYLE WS_CHILD
-FONT 8, "Tahoma"
+IDD_PREFTASKDEF_PAGE DIALOGEX 0, 0, 398, 300
+STYLE DS_SETFONT | WS_CHILD
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     LTEXT           "Default Attributes",IDC_DEFGROUP,7,11,384,8
     LTEXT           "&Allocated To",IDC_STATIC,7,27,87,8
@@ -417,12 +417,9 @@ BEGIN
     LTEXT           "C&ost",IDC_STATIC,7,111,87,8
     EDITTEXT        IDC_DEFAULTCOST,103,109,122,13,ES_AUTOHSCROLL
     LTEXT           "&Priority",IDC_STATIC,7,128,87,8
-    COMBOBOX        IDC_DEFAULTPRIORITY,103,126,122,136,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
+    COMBOBOX        IDC_DEFAULTPRIORITY,103,126,122,136,CBS_DROPDOWNLIST | CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Risk",IDC_STATIC,7,145,87,8
-    COMBOBOX        IDC_DEFAULTRISK,103,143,122,136,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_DEFAULTRISK,103,143,122,136,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Time Estimate",IDC_STATIC,7,162,87,8
     EDITTEXT        IDC_DEFAULTTIMEEST,103,160,122,13,ES_AUTOHSCROLL
     LTEXT           "&Time Spent",IDC_STATIC,7,179,87,8
@@ -437,55 +434,45 @@ BEGIN
     CONTROL         "&Date of creation",IDC_USECREATIONFORDEFSTARTDATE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,247,85,10
     LTEXT           "&Due Date",IDC_STATIC,7,261,87,8
-    CONTROL         "D&ate of creation",IDC_USECREATIONFORDEFDUEDATE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,103,260,85,10
+    CONTROL         "D&ate of creation",IDC_USECREATIONFORDEFDUEDATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,103,260,85,10
     LTEXT           "&Reminder",IDC_STATIC,7,276,87,8
-    COMBOBOX        IDC_DEFREMINDER,103,274,122,30,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_DEFREMINDERDATE,231,274,122,30,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Attribute Inheritance",IDC_INHERITGROUP,7,295,384,8
-    CONTROL         "&Have subtasks inherit the following attributes from their parent when they are created",
-                    IDC_USEPARENTATTRIB,"Button",BS_AUTOCHECKBOX | BS_TOP | 
-                    WS_TABSTOP,7,309,390,10
-    LISTBOX         IDC_INHERITATTRIBUTES,18,323,276,66,LBS_SORT | 
-                    LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | 
-                    LBS_NOINTEGRALHEIGHT | LBS_MULTICOLUMN | WS_VSCROLL | 
-                    WS_HSCROLL | WS_TABSTOP
-    CONTROL         "Contin&ue to update subtasks as parent changes",
-                    IDC_UPDATEINHERITATTRIB,"Button",BS_AUTOCHECKBOX | 
-                    BS_TOP | WS_TABSTOP,18,394,376,10
-    LTEXT           "Dynamic Droplists",IDC_DROPLISTGROUP,7,411,384,8
-    LTEXT           "Default &Categories",IDC_STATIC,7,425,127,8
-    EDITTEXT        IDC_CATEGORYLIST,7,438,121,62,ES_MULTILINE | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
-    CONTROL         "&Make this list read-only",IDC_CATLIST_READONLY,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,504,127,10
-    LTEXT           "Default &Statuses",IDC_STATIC,138,425,127,8
-    EDITTEXT        IDC_STATUSLIST,138,438,121,62,ES_MULTILINE | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    COMBOBOX        IDC_DEFREMINDER,103,274,122,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_DEFREMINDERDATE,231,274,122,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_PREFTASKDEF2_PAGE DIALOGEX 0, 0, 398, 334
+STYLE DS_SETFONT | WS_CHILD
+FONT 8, "Tahoma", 0, 0, 0x0
+BEGIN
+    LTEXT           "Attribute Inheritance",IDC_INHERITGROUP,7,11,384,8
+    CONTROL         "&Have subtasks inherit the following attributes from their parent when they are created",IDC_USEPARENTATTRIB,
+                    "Button",BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,7,25,390,10
+    LISTBOX         IDC_INHERITATTRIBUTES,18,39,276,66,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | LBS_MULTICOLUMN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    CONTROL         "Contin&ue to update subtasks as parent changes",IDC_UPDATEINHERITATTRIB,
+                    "Button",BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,18,110,376,10
+    LTEXT           "Dynamic Droplists",IDC_DROPLISTGROUP,7,127,384,8
+    LTEXT           "Default &Categories",IDC_STATIC,7,141,127,8
+    EDITTEXT        IDC_CATEGORYLIST,7,154,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    CONTROL         "&Make this list read-only",IDC_CATLIST_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,220,127,10
+    LTEXT           "Default &Statuses",IDC_STATIC,138,141,127,8
+    EDITTEXT        IDC_STATUSLIST,138,154,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     CONTROL         "&Make this list read-only",IDC_STATUSLIST_READONLY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,504,127,10
-    LTEXT           "Default &Versions",IDC_STATIC,269,425,127,8
-    EDITTEXT        IDC_VERSIONLIST,269,438,121,62,ES_MULTILINE | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,220,127,10
+    LTEXT           "Default &Versions",IDC_STATIC,269,141,127,8
+    EDITTEXT        IDC_VERSIONLIST,269,154,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     CONTROL         "&Make this list read-only",IDC_VERSIONLIST_READONLY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,269,504,127,10
-    LTEXT           "Default Allocated &To",IDC_DEFALLOCTO,7,523,127,8
-    EDITTEXT        IDC_ALLOCTOLIST,7,535,121,62,ES_MULTILINE | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,269,220,127,10
+    LTEXT           "Default Allocated &To",IDC_DEFALLOCTO,7,239,127,8
+    EDITTEXT        IDC_ALLOCTOLIST,7,251,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     CONTROL         "&Make this list read-only",IDC_ALLOCTOLIST_READONLY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,601,127,10
-    LTEXT           "Default Allocated &By",IDC_STATIC,138,523,127,8
-    EDITTEXT        IDC_ALLOCBYLIST,138,535,121,62,ES_MULTILINE | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,317,127,10
+    LTEXT           "Default Allocated &By",IDC_STATIC,138,239,127,8
+    EDITTEXT        IDC_ALLOCBYLIST,138,251,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     CONTROL         "&Make this list read-only",IDC_ALLOCBYLIST_READONLY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,601,127,10
-    LTEXT           "Default &Tags",IDC_STATIC,269,523,127,8
-    EDITTEXT        IDC_TAGLIST,269,535,121,62,ES_MULTILINE | ES_AUTOHSCROLL | 
-                    ES_WANTRETURN | WS_VSCROLL
-    CONTROL         "&Make this list read-only",IDC_TAGLIST_READONLY,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,269,601,127,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,317,127,10
+    LTEXT           "Default &Tags",IDC_STATIC,269,239,127,8
+    EDITTEXT        IDC_TAGLIST,269,251,121,62,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    CONTROL         "&Make this list read-only",IDC_TAGLIST_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,269,317,127,10
 END
 
 IDD_PREFTOOLS_PAGE DIALOG DISCARDABLE  0, 0, 400, 239
