--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -364,6 +364,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="TDLCommentsCtrl.cpp" />
     <ClCompile Include="TDLContentMgr.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -650,6 +651,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDLColumnAttribVisibilityListCtrl.h" />
     <ClInclude Include="TDLColumnListBox.h" />
     <ClInclude Include="TDLColumnSelectionDlg.h" />
+    <ClInclude Include="TDLCommentsCtrl.h" />
     <ClInclude Include="TDLContentMgr.h" />
     <ClInclude Include="TDLContentTypeCombobox.h" />
     <ClInclude Include="TDLImpExpAttributeMappingListCtrl.h" />
