--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -5123,6 +5123,8 @@ BEGIN
     IDS_CUSTOM_FEATURE_FILTER "Filter"
     IDS_SETREMINDER         "Set &Reminder..."
     IDS_MODIFYREMINDER      "&Modify Reminder..."
+    IDS_PROMPT_MULTIPLEFORMATS "<multiple formats>"
+    IDS_PROMPT_MULTIPLETASKS "<multiple tasks>"
 END
 
 #endif    // English (Australia) resources
