--- a/3rdParty/3rdParty.vcxproj
+++ b/3rdParty/3rdParty.vcxproj
@@ -277,6 +277,7 @@
     <ClInclude Include="Html2Rtf.h" />
     <ClInclude Include="Ini.h" />
     <ClInclude Include="Quantize.h" />
+    <ClInclude Include="T64Utils.h" />
     <ClInclude Include="Zlib\IOAPI.H" />
     <ClInclude Include="Zlib\IOWIN32.H" />
     <ClInclude Include="LockableHeaderCtrl.h" />
