--- a/ImportExport/MarkdownImpExp/MarkdownImpExpBridge/MarkdownImpExpBridge.vcxproj
+++ b/ImportExport/MarkdownImpExp/MarkdownImpExpBridge/MarkdownImpExpBridge.vcxproj
@@ -111,6 +111,9 @@ copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unico
   <ItemGroup>
     <None Include="markdown.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Core" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
