--- a/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
+++ b/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
@@ -108,6 +108,9 @@ copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unico
   <ItemGroup>
     <ResourceCompile Include="SampleImpExpBridge.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Core" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
