--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
@@ -109,6 +109,7 @@ copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unico
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
